// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePickerRange components TimePicker isShowSecond render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 600,
        "justifyContent": "center",
        "paddingHorizontal": 48,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "height": 400,
          "position": "relative",
        }
      }
    >
      <ThemedPickerView
        loop={true}
        onValueChange={[Function]}
        selectedValue={2}
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
          }
        }
        theme={Object {}}
      >
        <PickerIOSItem
          key="0"
          label="00"
          value={0}
        />
        <PickerIOSItem
          key="1"
          label="01"
          value={1}
        />
        <PickerIOSItem
          key="2"
          label="02"
          value={2}
        />
        <PickerIOSItem
          key="3"
          label="03"
          value={3}
        />
        <PickerIOSItem
          key="4"
          label="04"
          value={4}
        />
        <PickerIOSItem
          key="5"
          label="05"
          value={5}
        />
        <PickerIOSItem
          key="6"
          label="06"
          value={6}
        />
        <PickerIOSItem
          key="7"
          label="07"
          value={7}
        />
        <PickerIOSItem
          key="8"
          label="08"
          value={8}
        />
        <PickerIOSItem
          key="9"
          label="09"
          value={9}
        />
        <PickerIOSItem
          key="10"
          label="10"
          value={10}
        />
        <PickerIOSItem
          key="11"
          label="11"
          value={11}
        />
        <PickerIOSItem
          key="12"
          label="12"
          value={12}
        />
        <PickerIOSItem
          key="13"
          label="13"
          value={13}
        />
        <PickerIOSItem
          key="14"
          label="14"
          value={14}
        />
        <PickerIOSItem
          key="15"
          label="15"
          value={15}
        />
        <PickerIOSItem
          key="16"
          label="16"
          value={16}
        />
        <PickerIOSItem
          key="17"
          label="17"
          value={17}
        />
        <PickerIOSItem
          key="18"
          label="18"
          value={18}
        />
        <PickerIOSItem
          key="19"
          label="19"
          value={19}
        />
        <PickerIOSItem
          key="20"
          label="20"
          value={20}
        />
        <PickerIOSItem
          key="21"
          label="21"
          value={21}
        />
        <PickerIOSItem
          key="22"
          label="22"
          value={22}
        />
        <PickerIOSItem
          key="23"
          label="23"
          value={23}
        />
      </ThemedPickerView>
      <View
        style={
          Array [
            Object {
              "height": 400,
              "marginBottom": "auto",
              "marginTop": "auto",
              "position": "absolute",
            },
            Object {
              "right": 20,
            },
          ]
        }
      >
        <TYText
          align={null}
          color={null}
          size={null}
          style={
            Object {
              "lineHeight": 400,
            }
          }
          text="hourLabel"
          type={null}
          weight={null}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "height": 400,
          "position": "relative",
        }
      }
    >
      <ThemedPickerView
        loop={true}
        onValueChange={[Function]}
        selectedValue={22}
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
          }
        }
        theme={Object {}}
      >
        <PickerIOSItem
          key="0"
          label="00"
          value={0}
        />
        <PickerIOSItem
          key="1"
          label="01"
          value={1}
        />
        <PickerIOSItem
          key="2"
          label="02"
          value={2}
        />
        <PickerIOSItem
          key="3"
          label="03"
          value={3}
        />
        <PickerIOSItem
          key="4"
          label="04"
          value={4}
        />
        <PickerIOSItem
          key="5"
          label="05"
          value={5}
        />
        <PickerIOSItem
          key="6"
          label="06"
          value={6}
        />
        <PickerIOSItem
          key="7"
          label="07"
          value={7}
        />
        <PickerIOSItem
          key="8"
          label="08"
          value={8}
        />
        <PickerIOSItem
          key="9"
          label="09"
          value={9}
        />
        <PickerIOSItem
          key="10"
          label="10"
          value={10}
        />
        <PickerIOSItem
          key="11"
          label="11"
          value={11}
        />
        <PickerIOSItem
          key="12"
          label="12"
          value={12}
        />
        <PickerIOSItem
          key="13"
          label="13"
          value={13}
        />
        <PickerIOSItem
          key="14"
          label="14"
          value={14}
        />
        <PickerIOSItem
          key="15"
          label="15"
          value={15}
        />
        <PickerIOSItem
          key="16"
          label="16"
          value={16}
        />
        <PickerIOSItem
          key="17"
          label="17"
          value={17}
        />
        <PickerIOSItem
          key="18"
          label="18"
          value={18}
        />
        <PickerIOSItem
          key="19"
          label="19"
          value={19}
        />
        <PickerIOSItem
          key="20"
          label="20"
          value={20}
        />
        <PickerIOSItem
          key="21"
          label="21"
          value={21}
        />
        <PickerIOSItem
          key="22"
          label="22"
          value={22}
        />
        <PickerIOSItem
          key="23"
          label="23"
          value={23}
        />
        <PickerIOSItem
          key="24"
          label="24"
          value={24}
        />
        <PickerIOSItem
          key="25"
          label="25"
          value={25}
        />
        <PickerIOSItem
          key="26"
          label="26"
          value={26}
        />
        <PickerIOSItem
          key="27"
          label="27"
          value={27}
        />
        <PickerIOSItem
          key="28"
          label="28"
          value={28}
        />
        <PickerIOSItem
          key="29"
          label="29"
          value={29}
        />
        <PickerIOSItem
          key="30"
          label="30"
          value={30}
        />
        <PickerIOSItem
          key="31"
          label="31"
          value={31}
        />
        <PickerIOSItem
          key="32"
          label="32"
          value={32}
        />
        <PickerIOSItem
          key="33"
          label="33"
          value={33}
        />
        <PickerIOSItem
          key="34"
          label="34"
          value={34}
        />
        <PickerIOSItem
          key="35"
          label="35"
          value={35}
        />
        <PickerIOSItem
          key="36"
          label="36"
          value={36}
        />
        <PickerIOSItem
          key="37"
          label="37"
          value={37}
        />
        <PickerIOSItem
          key="38"
          label="38"
          value={38}
        />
        <PickerIOSItem
          key="39"
          label="39"
          value={39}
        />
        <PickerIOSItem
          key="40"
          label="40"
          value={40}
        />
        <PickerIOSItem
          key="41"
          label="41"
          value={41}
        />
        <PickerIOSItem
          key="42"
          label="42"
          value={42}
        />
        <PickerIOSItem
          key="43"
          label="43"
          value={43}
        />
        <PickerIOSItem
          key="44"
          label="44"
          value={44}
        />
        <PickerIOSItem
          key="45"
          label="45"
          value={45}
        />
        <PickerIOSItem
          key="46"
          label="46"
          value={46}
        />
        <PickerIOSItem
          key="47"
          label="47"
          value={47}
        />
        <PickerIOSItem
          key="48"
          label="48"
          value={48}
        />
        <PickerIOSItem
          key="49"
          label="49"
          value={49}
        />
        <PickerIOSItem
          key="50"
          label="50"
          value={50}
        />
        <PickerIOSItem
          key="51"
          label="51"
          value={51}
        />
        <PickerIOSItem
          key="52"
          label="52"
          value={52}
        />
        <PickerIOSItem
          key="53"
          label="53"
          value={53}
        />
        <PickerIOSItem
          key="54"
          label="54"
          value={54}
        />
        <PickerIOSItem
          key="55"
          label="55"
          value={55}
        />
        <PickerIOSItem
          key="56"
          label="56"
          value={56}
        />
        <PickerIOSItem
          key="57"
          label="57"
          value={57}
        />
        <PickerIOSItem
          key="58"
          label="58"
          value={58}
        />
        <PickerIOSItem
          key="59"
          label="59"
          value={59}
        />
      </ThemedPickerView>
      <View
        style={
          Array [
            Object {
              "height": 400,
              "marginBottom": "auto",
              "marginTop": "auto",
              "position": "absolute",
            },
            Object {
              "right": 20,
            },
          ]
        }
      >
        <TYText
          align={null}
          color={null}
          size={null}
          style={
            Object {
              "lineHeight": 400,
            }
          }
          text="minutesLabel"
          type={null}
          weight={null}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "height": 400,
          "position": "relative",
        }
      }
    >
      <ThemedPickerView
        loop={true}
        onValueChange={[Function]}
        selectedValue={11}
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
          }
        }
        theme={Object {}}
      >
        <PickerIOSItem
          key="0"
          label="00"
          value={0}
        />
        <PickerIOSItem
          key="1"
          label="01"
          value={1}
        />
        <PickerIOSItem
          key="2"
          label="02"
          value={2}
        />
        <PickerIOSItem
          key="3"
          label="03"
          value={3}
        />
        <PickerIOSItem
          key="4"
          label="04"
          value={4}
        />
        <PickerIOSItem
          key="5"
          label="05"
          value={5}
        />
        <PickerIOSItem
          key="6"
          label="06"
          value={6}
        />
        <PickerIOSItem
          key="7"
          label="07"
          value={7}
        />
        <PickerIOSItem
          key="8"
          label="08"
          value={8}
        />
        <PickerIOSItem
          key="9"
          label="09"
          value={9}
        />
        <PickerIOSItem
          key="10"
          label="10"
          value={10}
        />
        <PickerIOSItem
          key="11"
          label="11"
          value={11}
        />
        <PickerIOSItem
          key="12"
          label="12"
          value={12}
        />
        <PickerIOSItem
          key="13"
          label="13"
          value={13}
        />
        <PickerIOSItem
          key="14"
          label="14"
          value={14}
        />
        <PickerIOSItem
          key="15"
          label="15"
          value={15}
        />
        <PickerIOSItem
          key="16"
          label="16"
          value={16}
        />
        <PickerIOSItem
          key="17"
          label="17"
          value={17}
        />
        <PickerIOSItem
          key="18"
          label="18"
          value={18}
        />
        <PickerIOSItem
          key="19"
          label="19"
          value={19}
        />
        <PickerIOSItem
          key="20"
          label="20"
          value={20}
        />
        <PickerIOSItem
          key="21"
          label="21"
          value={21}
        />
        <PickerIOSItem
          key="22"
          label="22"
          value={22}
        />
        <PickerIOSItem
          key="23"
          label="23"
          value={23}
        />
        <PickerIOSItem
          key="24"
          label="24"
          value={24}
        />
        <PickerIOSItem
          key="25"
          label="25"
          value={25}
        />
        <PickerIOSItem
          key="26"
          label="26"
          value={26}
        />
        <PickerIOSItem
          key="27"
          label="27"
          value={27}
        />
        <PickerIOSItem
          key="28"
          label="28"
          value={28}
        />
        <PickerIOSItem
          key="29"
          label="29"
          value={29}
        />
        <PickerIOSItem
          key="30"
          label="30"
          value={30}
        />
        <PickerIOSItem
          key="31"
          label="31"
          value={31}
        />
        <PickerIOSItem
          key="32"
          label="32"
          value={32}
        />
        <PickerIOSItem
          key="33"
          label="33"
          value={33}
        />
        <PickerIOSItem
          key="34"
          label="34"
          value={34}
        />
        <PickerIOSItem
          key="35"
          label="35"
          value={35}
        />
        <PickerIOSItem
          key="36"
          label="36"
          value={36}
        />
        <PickerIOSItem
          key="37"
          label="37"
          value={37}
        />
        <PickerIOSItem
          key="38"
          label="38"
          value={38}
        />
        <PickerIOSItem
          key="39"
          label="39"
          value={39}
        />
        <PickerIOSItem
          key="40"
          label="40"
          value={40}
        />
        <PickerIOSItem
          key="41"
          label="41"
          value={41}
        />
        <PickerIOSItem
          key="42"
          label="42"
          value={42}
        />
        <PickerIOSItem
          key="43"
          label="43"
          value={43}
        />
        <PickerIOSItem
          key="44"
          label="44"
          value={44}
        />
        <PickerIOSItem
          key="45"
          label="45"
          value={45}
        />
        <PickerIOSItem
          key="46"
          label="46"
          value={46}
        />
        <PickerIOSItem
          key="47"
          label="47"
          value={47}
        />
        <PickerIOSItem
          key="48"
          label="48"
          value={48}
        />
        <PickerIOSItem
          key="49"
          label="49"
          value={49}
        />
        <PickerIOSItem
          key="50"
          label="50"
          value={50}
        />
        <PickerIOSItem
          key="51"
          label="51"
          value={51}
        />
        <PickerIOSItem
          key="52"
          label="52"
          value={52}
        />
        <PickerIOSItem
          key="53"
          label="53"
          value={53}
        />
        <PickerIOSItem
          key="54"
          label="54"
          value={54}
        />
        <PickerIOSItem
          key="55"
          label="55"
          value={55}
        />
        <PickerIOSItem
          key="56"
          label="56"
          value={56}
        />
        <PickerIOSItem
          key="57"
          label="57"
          value={57}
        />
        <PickerIOSItem
          key="58"
          label="58"
          value={58}
        />
        <PickerIOSItem
          key="59"
          label="59"
          value={59}
        />
      </ThemedPickerView>
      <View
        style={
          Array [
            Object {
              "height": 400,
              "marginBottom": "auto",
              "marginTop": "auto",
              "position": "absolute",
            },
            Object {
              "right": 20,
            },
          ]
        }
      >
        <TYText
          align={null}
          color={null}
          size={null}
          style={
            Object {
              "lineHeight": 400,
            }
          }
          text="secondLabel"
          type={null}
          weight={null}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`TimePickerRange components TimePicker render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 600,
        "justifyContent": "center",
        "paddingHorizontal": 48,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "height": 400,
          "position": "relative",
        }
      }
    >
      <ThemedPickerView
        loop={true}
        onValueChange={[Function]}
        selectedValue={2}
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
          }
        }
        theme={Object {}}
      >
        <PickerIOSItem
          key="0"
          label="00"
          value={0}
        />
        <PickerIOSItem
          key="1"
          label="01"
          value={1}
        />
        <PickerIOSItem
          key="2"
          label="02"
          value={2}
        />
        <PickerIOSItem
          key="3"
          label="03"
          value={3}
        />
        <PickerIOSItem
          key="4"
          label="04"
          value={4}
        />
        <PickerIOSItem
          key="5"
          label="05"
          value={5}
        />
        <PickerIOSItem
          key="6"
          label="06"
          value={6}
        />
        <PickerIOSItem
          key="7"
          label="07"
          value={7}
        />
        <PickerIOSItem
          key="8"
          label="08"
          value={8}
        />
        <PickerIOSItem
          key="9"
          label="09"
          value={9}
        />
        <PickerIOSItem
          key="10"
          label="10"
          value={10}
        />
        <PickerIOSItem
          key="11"
          label="11"
          value={11}
        />
        <PickerIOSItem
          key="12"
          label="12"
          value={12}
        />
        <PickerIOSItem
          key="13"
          label="13"
          value={13}
        />
        <PickerIOSItem
          key="14"
          label="14"
          value={14}
        />
        <PickerIOSItem
          key="15"
          label="15"
          value={15}
        />
        <PickerIOSItem
          key="16"
          label="16"
          value={16}
        />
        <PickerIOSItem
          key="17"
          label="17"
          value={17}
        />
        <PickerIOSItem
          key="18"
          label="18"
          value={18}
        />
        <PickerIOSItem
          key="19"
          label="19"
          value={19}
        />
        <PickerIOSItem
          key="20"
          label="20"
          value={20}
        />
        <PickerIOSItem
          key="21"
          label="21"
          value={21}
        />
        <PickerIOSItem
          key="22"
          label="22"
          value={22}
        />
        <PickerIOSItem
          key="23"
          label="23"
          value={23}
        />
      </ThemedPickerView>
      <View
        style={
          Array [
            Object {
              "height": 400,
              "marginBottom": "auto",
              "marginTop": "auto",
              "position": "absolute",
            },
            Object {
              "right": 80,
            },
          ]
        }
      >
        <TYText
          align={null}
          color={null}
          size={null}
          style={
            Object {
              "lineHeight": 400,
            }
          }
          text="hourLabel"
          type={null}
          weight={null}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "height": 400,
          "position": "relative",
        }
      }
    >
      <ThemedPickerView
        loop={true}
        onValueChange={[Function]}
        selectedValue={22}
        style={
          Object {
            "alignSelf": "center",
            "flex": 1,
          }
        }
        theme={Object {}}
      >
        <PickerIOSItem
          key="0"
          label="00"
          value={0}
        />
        <PickerIOSItem
          key="1"
          label="01"
          value={1}
        />
        <PickerIOSItem
          key="2"
          label="02"
          value={2}
        />
        <PickerIOSItem
          key="3"
          label="03"
          value={3}
        />
        <PickerIOSItem
          key="4"
          label="04"
          value={4}
        />
        <PickerIOSItem
          key="5"
          label="05"
          value={5}
        />
        <PickerIOSItem
          key="6"
          label="06"
          value={6}
        />
        <PickerIOSItem
          key="7"
          label="07"
          value={7}
        />
        <PickerIOSItem
          key="8"
          label="08"
          value={8}
        />
        <PickerIOSItem
          key="9"
          label="09"
          value={9}
        />
        <PickerIOSItem
          key="10"
          label="10"
          value={10}
        />
        <PickerIOSItem
          key="11"
          label="11"
          value={11}
        />
        <PickerIOSItem
          key="12"
          label="12"
          value={12}
        />
        <PickerIOSItem
          key="13"
          label="13"
          value={13}
        />
        <PickerIOSItem
          key="14"
          label="14"
          value={14}
        />
        <PickerIOSItem
          key="15"
          label="15"
          value={15}
        />
        <PickerIOSItem
          key="16"
          label="16"
          value={16}
        />
        <PickerIOSItem
          key="17"
          label="17"
          value={17}
        />
        <PickerIOSItem
          key="18"
          label="18"
          value={18}
        />
        <PickerIOSItem
          key="19"
          label="19"
          value={19}
        />
        <PickerIOSItem
          key="20"
          label="20"
          value={20}
        />
        <PickerIOSItem
          key="21"
          label="21"
          value={21}
        />
        <PickerIOSItem
          key="22"
          label="22"
          value={22}
        />
        <PickerIOSItem
          key="23"
          label="23"
          value={23}
        />
        <PickerIOSItem
          key="24"
          label="24"
          value={24}
        />
        <PickerIOSItem
          key="25"
          label="25"
          value={25}
        />
        <PickerIOSItem
          key="26"
          label="26"
          value={26}
        />
        <PickerIOSItem
          key="27"
          label="27"
          value={27}
        />
        <PickerIOSItem
          key="28"
          label="28"
          value={28}
        />
        <PickerIOSItem
          key="29"
          label="29"
          value={29}
        />
        <PickerIOSItem
          key="30"
          label="30"
          value={30}
        />
        <PickerIOSItem
          key="31"
          label="31"
          value={31}
        />
        <PickerIOSItem
          key="32"
          label="32"
          value={32}
        />
        <PickerIOSItem
          key="33"
          label="33"
          value={33}
        />
        <PickerIOSItem
          key="34"
          label="34"
          value={34}
        />
        <PickerIOSItem
          key="35"
          label="35"
          value={35}
        />
        <PickerIOSItem
          key="36"
          label="36"
          value={36}
        />
        <PickerIOSItem
          key="37"
          label="37"
          value={37}
        />
        <PickerIOSItem
          key="38"
          label="38"
          value={38}
        />
        <PickerIOSItem
          key="39"
          label="39"
          value={39}
        />
        <PickerIOSItem
          key="40"
          label="40"
          value={40}
        />
        <PickerIOSItem
          key="41"
          label="41"
          value={41}
        />
        <PickerIOSItem
          key="42"
          label="42"
          value={42}
        />
        <PickerIOSItem
          key="43"
          label="43"
          value={43}
        />
        <PickerIOSItem
          key="44"
          label="44"
          value={44}
        />
        <PickerIOSItem
          key="45"
          label="45"
          value={45}
        />
        <PickerIOSItem
          key="46"
          label="46"
          value={46}
        />
        <PickerIOSItem
          key="47"
          label="47"
          value={47}
        />
        <PickerIOSItem
          key="48"
          label="48"
          value={48}
        />
        <PickerIOSItem
          key="49"
          label="49"
          value={49}
        />
        <PickerIOSItem
          key="50"
          label="50"
          value={50}
        />
        <PickerIOSItem
          key="51"
          label="51"
          value={51}
        />
        <PickerIOSItem
          key="52"
          label="52"
          value={52}
        />
        <PickerIOSItem
          key="53"
          label="53"
          value={53}
        />
        <PickerIOSItem
          key="54"
          label="54"
          value={54}
        />
        <PickerIOSItem
          key="55"
          label="55"
          value={55}
        />
        <PickerIOSItem
          key="56"
          label="56"
          value={56}
        />
        <PickerIOSItem
          key="57"
          label="57"
          value={57}
        />
        <PickerIOSItem
          key="58"
          label="58"
          value={58}
        />
        <PickerIOSItem
          key="59"
          label="59"
          value={59}
        />
      </ThemedPickerView>
      <View
        style={
          Array [
            Object {
              "height": 400,
              "marginBottom": "auto",
              "marginTop": "auto",
              "position": "absolute",
            },
            Object {
              "right": 80,
            },
          ]
        }
      >
        <TYText
          align={null}
          color={null}
          size={null}
          style={
            Object {
              "lineHeight": 400,
            }
          }
          text="minutesLabel"
          type={null}
          weight={null}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`TimePickerRange components basicd isShowSecond false render 1`] = `
<View>
  <TYListItem
    Action="08:00"
    Icon={null}
    actionDisabled={false}
    actionType="auto"
    arrow={true}
    arrowColor={null}
    arrowUseIcon={false}
    disabled={false}
    iconColor={null}
    iconSize={null}
    iconType="auto"
    imageFollowIconColor={true}
    key="beginTime"
    needUpdate={true}
    onPress={[Function]}
    style={
      Object {
        "borderBottomColor": "#f8f8f8",
        "borderBottomWidth": 1,
      }
    }
    styles={Object {}}
    subTitle={null}
    theme={Object {}}
    title="Begin time"
    useART={false}
  />
  <TYListItem
    Action="20:00"
    Icon={null}
    actionDisabled={false}
    actionType="auto"
    arrow={true}
    arrowColor={null}
    arrowUseIcon={false}
    disabled={false}
    iconColor={null}
    iconSize={null}
    iconType="auto"
    imageFollowIconColor={true}
    key="endTime"
    needUpdate={true}
    onPress={[Function]}
    style={
      Object {
        "borderBottomColor": "#f8f8f8",
        "borderBottomWidth": 1,
      }
    }
    styles={Object {}}
    subTitle={null}
    theme={Object {}}
    title="End time"
    useART={false}
  />
</View>
`;

exports[`TimePickerRange components basicd isShowSecond render 1`] = `
<View>
  <TYListItem
    Action="08:00:00"
    Icon={null}
    actionDisabled={false}
    actionType="auto"
    arrow={true}
    arrowColor={null}
    arrowUseIcon={false}
    disabled={false}
    iconColor={null}
    iconSize={null}
    iconType="auto"
    imageFollowIconColor={true}
    key="beginTime"
    needUpdate={true}
    onPress={[Function]}
    style={
      Object {
        "borderBottomColor": "#f8f8f8",
        "borderBottomWidth": 1,
      }
    }
    styles={Object {}}
    subTitle={null}
    theme={Object {}}
    title="Begin time"
    useART={false}
  />
  <TYListItem
    Action="20:00:00"
    Icon={null}
    actionDisabled={false}
    actionType="auto"
    arrow={true}
    arrowColor={null}
    arrowUseIcon={false}
    disabled={false}
    iconColor={null}
    iconSize={null}
    iconType="auto"
    imageFollowIconColor={true}
    key="endTime"
    needUpdate={true}
    onPress={[Function]}
    style={
      Object {
        "borderBottomColor": "#f8f8f8",
        "borderBottomWidth": 1,
      }
    }
    styles={Object {}}
    subTitle={null}
    theme={Object {}}
    title="End time"
    useART={false}
  />
</View>
`;
